compiling with Closure

--- a/web/index.html
+++ b/web/index.html
@@ -10,8 +10,13 @@
       <div data-foo data-foo-angle="270" class="beta"></div>
       <div data-foo data-foo-angle="180" data-foo-color="blue" class="gamma"></div>
       <div data-foo data-foo-angle="0" data-foo-color="dimgrey" class="delta"></div>
+      <div id="bar"></div>
     </div>
 
-    <script type="module" src="/js/main.js"></script>
+
+    <!-- <script type="module" src="/js/main.js"></script>-->
+    <script src="/js/out.js"></script>
+
+
   </body>
 </html>
